--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,6 +33,7 @@
     <color name="e0e0e0">#e0e0e0</color>
     <color name="F4C4C4C">#4C4C4C</color>
     <color name="DCDCDC">#DCDCDC</color>
+    <color name="F333333">#333333</color>
 
 
 </resources>
