--- a/app/src/main/res/layout/layout_works.xml
+++ b/app/src/main/res/layout/layout_works.xml
@@ -1,41 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.hjq.shape.layout.ShapeConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:shape_radius="11dp"
-    app:shape_solidColor="@color/white"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="15dp"
-    android:layout_marginTop="10dp">
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/iv_work"
-        android:layout_width="120dp"
-        android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="h,1:0.625"
-        app:shapeAppearance="@style/circle11Image2"
-        android:background="@drawable/aa"/>
-    <TextView
-        android:id="@+id/tv_works_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="绘声绘色"
-        android:textSize="16dp"
-        android:textColor="@color/F1A1A1A"
-        app:layout_constraintStart_toEndOf="@+id/iv_work"
-        app:layout_constraintTop_toTopOf="@+id/iv_work"
-        android:layout_marginStart="15.5dp"
-        android:layout_marginTop="3dp"/>
-    <TextView
-        android:id="@+id/tv_works_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="2022-01-01 18:00"
-        android:textColor="@color/A8A8A8"
-        android:textSize="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_works_title"
-        app:layout_constraintStart_toStartOf="@+id/tv_works_title"
-        android:layout_marginTop="12dp"
-        />
 
 
-</com.hjq.shape.layout.ShapeConstraintLayout>
+    <com.hjq.shape.layout.ShapeConstraintLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:padding="15dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:shape_radius="11dp"
+        app:shape_solidColor="@color/white">
+
+        <LinearLayout
+            android:id="@+id/layout_sharewx"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="21dp"
+            android:gravity="center"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toStartOf="@+id/layout_sharequan"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_work">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/wechat_icon_w" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="@string/share_wx"
+                android:textColor="@color/A8A8A8"
+                android:textSize="12dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/layout_sharequan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="21dp"
+            android:gravity="center"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/layout_sharewx"
+            app:layout_constraintTop_toBottomOf="@id/iv_work">
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/wechaquan_icon_w" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="@string/share_wxquan"
+                android:textColor="@color/A8A8A8"
+                android:textSize="12dp" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginTop="15dp"
+            android:background="@color/F5F5F5"
+            app:layout_constraintTop_toBottomOf="@id/iv_work" />
+
+        <TextView
+            android:id="@+id/tv_works_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15.5dp"
+            android:layout_marginTop="3dp"
+            android:text="绘声绘色"
+            android:textColor="@color/F1A1A1A"
+            android:textSize="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/tv_works_time"
+            app:layout_constraintStart_toEndOf="@+id/iv_work"
+            app:layout_constraintTop_toTopOf="@id/iv_work"
+            app:layout_constraintVertical_chainStyle="spread_inside" />
+
+        <TextView
+            android:id="@+id/tv_works_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2022-01-01 18:00"
+            android:textColor="@color/A8A8A8"
+            android:textSize="12dp"
+            app:layout_constraintBottom_toTopOf="@+id/btn_play"
+            app:layout_constraintStart_toStartOf="@+id/tv_works_title"
+            app:layout_constraintTop_toBottomOf="@+id/tv_works_title" />
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/iv_work"
+            android:layout_width="130dp"
+            android:layout_height="0dp"
+            android:background="@drawable/aa"
+            app:layout_constraintDimensionRatio="h,1:0.625"
+            app:shapeAppearance="@style/circle11Image2" />
+
+        <com.hjq.shape.view.ShapeButton
+            android:id="@+id/btn_play"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="3dp"
+            android:paddingEnd="20dp"
+            android:paddingStart="20dp"
+            android:paddingTop="3dp"
+            android:text="播放"
+            android:textColor="@color/FE9520"
+            android:textSize="13dp"
+            app:layout_constraintBottom_toBottomOf="@id/iv_work"
+            app:layout_constraintStart_toStartOf="@id/tv_works_time"
+            app:layout_constraintTop_toBottomOf="@+id/tv_works_time"
+            app:shape_radius="14dp"
+            app:shape_solidColor="@color/white"
+            app:shape_strokeColor="@color/FE9520"
+            app:shape_strokeWidth="0.5dp" />
+
+    </com.hjq.shape.layout.ShapeConstraintLayout>
+
