--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -18,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintDimensionRatio="h,1:1"
         app:shapeAppearance="@style/circle11Image2"
+        app:strokeColor="@color/white"
         />
     <TextView
         android:id="@+id/tv_product_title"
