--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -84,6 +84,7 @@
 车多用"
         android:textSize="13dp"
         android:textColor="@color/A8A8A8"
+        android:minLines="2"
         android:maxLines="2"
         android:ellipsize="end"
         app:layout_constraintStart_toStartOf="@id/tv_product_title"
