--- a/app/src/main/res/layout/activity_perfect.xml
+++ b/app/src/main/res/layout/activity_perfect.xml
@@ -15,6 +15,12 @@
         android:layout_height="wrap_content"
         app:layout_constraintGuide_percent="0.04"
         android:orientation="horizontal"/>
+    <com.hjq.bar.TitleBar
+        android:id="@+id/title_perfect"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:background="@color/transparent"
+        app:lineVisible="false"/>
     <TextView
         android:id="@+id/tv_skip"
         android:layout_width="wrap_content"
@@ -125,7 +131,8 @@
                 android:id="@+id/tv_sex"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/string_boy"
+                android:hint="@string/select_sex"
+                android:textColorHint="@color/CCCCCC"
                 android:textSize="17dp"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
