--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -108,6 +108,7 @@
         android:paddingBottom="5dp"
         app:layout_constraintTop_toBottomOf="@id/tv_product_desc"
         app:layout_constraintTop_toTopOf="@id/tv_product_price02"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"/>
 
 </com.hjq.shape.layout.ShapeConstraintLayout>
