--- a/app/src/main/res/layout/mine_fragment.xml
+++ b/app/src/main/res/layout/mine_fragment.xml
@@ -31,6 +31,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:shapeAppearance="@style/circleImage"
+                app:strokeColor="@color/white"
                 />
 
             <ImageView
