--- a/app/src/main/res/layout/banner_image_title.xml
+++ b/app/src/main/res/layout/banner_image_title.xml
@@ -22,5 +22,6 @@
         android:padding="10dp"
         android:singleLine="true"
         android:textColor="#ffffff"
-        app:layout_constraintBottom_toBottomOf="@+id/image"/>
+        app:layout_constraintBottom_toBottomOf="@+id/image"
+        android:visibility="gone"/>
 </com.hjq.shape.layout.ShapeConstraintLayout>
