--- a/app/src/main/res/layout/layout_specifications.xml
+++ b/app/src/main/res/layout/layout_specifications.xml
@@ -135,9 +135,9 @@
             android:textSize="12dp"
             android:textColor="@color/FE9520"/>
         <TextView
+            android:id="@+id/tv_sku_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2,678"
             android:textSize="23dp"
             android:textColor="@color/FE9520"/>
     </LinearLayout>
