--- a/app/src/main/res/layout/activity_up_order.xml
+++ b/app/src/main/res/layout/activity_up_order.xml
@@ -24,8 +24,6 @@
         android:layout_height="wrap_content"
         app:shape_startColor="#FE9520"
         app:shape_endColor="#FEAD20"
-        android:paddingStart="15dp"
-        android:paddingEnd="15dp"
         android:paddingBottom="15dp"
         app:layout_constraintTop_toTopOf="parent">
         <com.hjq.bar.TitleBar
@@ -37,13 +35,17 @@
             app:titleColor="@color/white"
             app:leftTitleColor="@color/white"
             app:leftIconTint="@color/white"
-            app:lineVisible="false"/>
+            app:lineVisible="false"
+            app:childPaddingHorizontal="15dp"/>
         <com.hjq.shape.layout.ShapeConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="88dp"
+            android:layout_height="wrap_content"
             app:shape_solidColor="@color/white"
             app:layout_constraintTop_toBottomOf="@id/title_order"
-            app:shape_radius="11dp">
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            app:shape_radius="11dp"
+            android:padding="15dp">
             <com.hjq.shape.layout.ShapeLinearLayout
                 android:id="@+id/layout_address01"
                 android:layout_width="wrap_content"
@@ -59,7 +61,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent">
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:visibility="gone">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -72,7 +75,67 @@
                     android:src="@drawable/address_jump_icon"
                     android:layout_marginStart="5dp"/>
             </com.hjq.shape.layout.ShapeLinearLayout>
+
+            <TextView
+                android:id="@+id/address_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15dp"
+                android:textColor="@color/F1A1A1A"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+            <TextView
+                android:id="@+id/address_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@id/address_name"
+                app:layout_constraintTop_toTopOf="@id/address_name"
+                android:layout_marginStart="13dp"
+                android:textSize="13dp"
+                android:textColor="@color/F1A1A1A"/>
+            <com.hjq.shape.layout.ShapeLinearLayout
+                android:id="@+id/layout_address02"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:shape_radius="11.5dp"
+                app:shape_solidColor="@color/FFECD6"
+                android:orientation="horizontal"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:paddingTop="6dp"
+                android:paddingBottom="6dp"
+                android:gravity="center_vertical"
+                app:layout_constraintTop_toTopOf="@id/address_phone"
+                app:layout_constraintEnd_toEndOf="parent">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="修改地址"
+                    android:textColor="@color/FE9520"
+                    android:textSize="12dp"/>
+                <ImageView
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:src="@drawable/address_jump_icon"
+                    android:layout_marginStart="5dp"/>
+
+            </com.hjq.shape.layout.ShapeLinearLayout>
+            <TextView
+                android:id="@+id/tv_address_detail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/F666666"
+                android:textSize="12dp"
+                app:layout_constraintTop_toBottomOf="@id/layout_address01"
+                android:layout_marginTop="10dp"/>
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/group_address"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:constraint_referenced_ids="address_name,address_phone,layout_address02,tv_address_detail"/>
         </com.hjq.shape.layout.ShapeConstraintLayout>
+
 
     </com.hjq.shape.layout.ShapeConstraintLayout>
 
@@ -98,8 +161,6 @@
             android:id="@+id/tv_ordertitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="宝贝高碳钢儿童平衡车三轮
-车电动车宝贝高碳钢儿童平衡车三轮"
             android:textSize="14dp"
             android:textColor="@color/F1A1A1A"
             app:layout_constraintStart_toEndOf="@id/iv_orderpic"
@@ -112,15 +173,16 @@
             android:id="@+id/tv_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="￥50.48"
             android:textColor="@color/F1A1A1A"
             android:textSize="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/tv_ordertitle"/>
         <TextView
+            android:id="@+id/tv_ordernum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="×1"
+            android:textColor="@color/A8A8A8"
             app:layout_constraintTop_toBottomOf="@id/tv_ordertitle"
             app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -147,6 +209,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
         <TextView
+            android:id="@+id/order_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="￥xxx"
@@ -166,9 +229,10 @@
             app:layout_constraintTop_toBottomOf="@id/tv_orderlabel01"
             android:layout_marginTop="20dp"/>
         <TextView
+            android:id="@+id/tv_coupon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="￥xxx"
+            android:text="无"
             android:textSize="15dp"
             android:textColor="@color/F1A1A1A"
             app:layout_constraintTop_toTopOf="@id/tv_orderlabel02"
@@ -251,6 +315,7 @@
             android:textColor="@color/FF4E4E"
             android:layout_marginStart="5dp"/>
         <TextView
+            android:id="@+id/tv_total_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="x,xxx"
@@ -276,4 +341,6 @@
         />
 
 </com.hjq.shape.layout.ShapeConstraintLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
