--- a/app/src/main/res/layout/layout_specifications.xml
+++ b/app/src/main/res/layout/layout_specifications.xml
@@ -57,7 +57,8 @@
             android:id="@+id/tv_sub"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="-"/>
+            android:text="-"
+            android:textColor="@color/CCCCCC"/>
 
         <TextView
             android:layout_width="0.5dp"
@@ -71,6 +72,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1"
+            android:textColor="@color/F1A1A1A"
             android:layout_marginStart="10dp"/>
 
         <TextView
@@ -85,7 +87,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:text="+"/>
+            android:text="+"
+            android:textColor="@color/F1A1A1A"/>
 
     </com.hjq.shape.layout.ShapeLinearLayout>
 
