--- a/app/src/main/res/layout/activity_up_order.xml
+++ b/app/src/main/res/layout/activity_up_order.xml
@@ -61,8 +61,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:visibility="gone">
+                app:layout_constraintBottom_toBottomOf="parent">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -106,7 +105,8 @@
                 android:paddingBottom="6dp"
                 android:gravity="center_vertical"
                 app:layout_constraintTop_toTopOf="@id/address_phone"
-                app:layout_constraintEnd_toEndOf="parent">
+                app:layout_constraintEnd_toEndOf="parent"
+                android:visibility="gone">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -295,9 +295,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
         <TextView
+            android:id="@+id/tv_orderjianshu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="共一件"
             android:textSize="13dp"
             android:textColor="#666666"/>
         <TextView
@@ -318,7 +318,6 @@
             android:id="@+id/tv_total_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="x,xxx"
             android:textSize="22dp"
             android:textColor="@color/FF4E4E"/>
     </LinearLayout>
