--- a/app/src/main/res/layout/layout_hover_header.xml
+++ b/app/src/main/res/layout/layout_hover_header.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tv_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="游戏王国"
+        android:text="推荐"
         android:textSize="18dp"
         android:textStyle="bold"
         android:textColor="@color/F1A1A1A"
