--- a/app/src/main/res/layout/project_fragment.xml
+++ b/app/src/main/res/layout/project_fragment.xml
@@ -20,27 +20,39 @@
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96"/>
 
-<!--   <com.hjq.bar.TitleBar-->
-<!--       android:id="@+id/title_tuijian"-->
-<!--       android:layout_width="match_parent"-->
-<!--       android:layout_height="44dp"-->
-<!--       app:title="推荐"-->
-<!--       app:titleGravity="start"-->
-<!--       app:leftIconWidth="0dp"-->
-<!--       android:background="@color/white"-->
-<!--       app:layout_constraintTop_toTopOf="parent"-->
-<!--       android:layout_marginTop="30dp"-->
-<!--       />-->
-
-   <androidx.recyclerview.widget.RecyclerView
-       android:id="@+id/video_list"
+   <com.drake.statelayout.StateLayout
+       android:id="@+id/state_works"
        android:layout_width="0dp"
        android:layout_height="0dp"
-       app:layout_constraintStart_toEndOf="@id/project_lineleft"
-       app:layout_constraintEnd_toStartOf="@id/project_lineright"
-       tools:listitem="@layout/item_product"
-       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
-       android:layout_marginTop="30dp"/>
+       app:layout_constraintStart_toEndOf="@id/project_lineleft"
+       app:layout_constraintEnd_toStartOf="@id/project_lineright">
+
+      <androidx.constraintlayout.widget.ConstraintLayout
+          android:layout_width="match_parent"
+          android:layout_height="match_parent">
+         <androidx.recyclerview.widget.RecyclerView
+             android:id="@+id/product_list01"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             tools:listitem="@layout/item_product"
+             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+             android:layout_marginTop="30dp"
+             android:visibility="gone"/>
+
+         <androidx.recyclerview.widget.RecyclerView
+             android:id="@+id/product_list02"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             tools:listitem="@layout/item_product"
+             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+             android:layout_marginTop="30dp"
+             android:visibility="gone"/>
+      </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+   </com.drake.statelayout.StateLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
