--- a/app/src/main/res/layout/activity_more_project.xml
+++ b/app/src/main/res/layout/activity_more_project.xml
@@ -20,6 +20,7 @@
         app:layout_constraintGuide_percent="0.96"/>
 
     <com.hjq.bar.TitleBar
+        android:id="@+id/more_title"
         android:layout_width="match_parent"
         android:layout_height="44dp"
         app:title="游戏王国"
