--- a/app/src/main/res/layout/activity_course_detail.xml
+++ b/app/src/main/res/layout/activity_course_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -25,7 +25,6 @@
         android:id="@+id/detail_title"
         android:layout_width="match_parent"
         android:layout_height="44dp"
-        app:title="这是谁的蛋"
         app:titleColor="@color/black"
         app:titleStyle="bold"
         app:leftIconTint="@color/black"
@@ -35,8 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintDimensionRatio="h,1:0.56"
-        app:layout_constraintTop_toBottomOf="@id/detail_title"
-        android:background="@drawable/test" />
+        app:layout_constraintTop_toBottomOf="@id/detail_title" />
 
     <TextView
         android:id="@+id/course_jianjie"
@@ -45,7 +43,6 @@
         android:layout_marginTop="15dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:text="动物妈妈们在河边的草丛里发现了一颗蛋，动物妈妈们在河边的草丛里发现了一颗蛋"
         android:textColor="@color/F1A1A1A"
         android:textSize="14dp"
         app:layout_constraintEnd_toStartOf="@id/layout_show"
@@ -72,17 +69,24 @@
             android:layout_height="8dp"
             android:background="@drawable/video_down_icon"/>
     </LinearLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/list_course"
+    <com.drake.statelayout.StateLayout
+        android:id="@+id/state_course"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintStart_toEndOf="@id/course_left"
-        app:layout_constraintEnd_toStartOf="@id/course_right"
-        app:layout_constraintTop_toBottomOf="@id/layout_show"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="30dp"
-        tools:listitem="@layout/item_course"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+        app:layout_constraintEnd_toStartOf="@id/course_right"
+        app:layout_constraintStart_toEndOf="@id/course_left"
+        app:layout_constraintTop_toBottomOf="@id/layout_show"
+        android:layout_marginTop="30dp">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/list_course"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_course" />
+    </com.drake.statelayout.StateLayout>
 
 
-</androidx.constraintlayout.motion.widget.MotionLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
