--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -49,6 +49,6 @@
         <item name="android:contentDescription">@string/exo_controls_pause_description</item>
     </style>
 
-    <drawable name="mexo_controls_pause">@drawable/suspend_icon</drawable>
-    <drawable name="mexo_controls_play">@drawable/start_icon</drawable>
+    <drawable name="mexo_controls_play">@drawable/suspend_icon</drawable>
+    <drawable name="mexo_controls_pause">@drawable/start_icon</drawable>
 </resources>
