--- a/app/src/main/res/layout/activity_more_project.xml
+++ b/app/src/main/res/layout/activity_more_project.xml
@@ -27,17 +27,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/list_more"
+    <com.drake.brv.PageRefreshLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintStart_toEndOf="@id/project_lineleft"
         app:layout_constraintEnd_toStartOf="@id/project_lineright"
-        tools:listitem="@layout/item_product"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="30dp"
-        android:transitionName="project"/>
+        app:layout_constraintTop_toBottomOf="@id/more_title"
+        app:layout_constraintBottom_toBottomOf="parent">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/list_more"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/item_product"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:layout_marginTop="30dp"
+            android:transitionName="project"/>
+    </com.drake.brv.PageRefreshLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
