--- a/app/src/main/res/layout/activity_more_project.xml
+++ b/app/src/main/res/layout/activity_more_project.xml
@@ -28,6 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
     <com.drake.brv.PageRefreshLayout
+        android:id="@+id/product_page"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintStart_toEndOf="@id/project_lineleft"
