--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,6 +34,7 @@
     <color name="F4C4C4C">#4C4C4C</color>
     <color name="DCDCDC">#DCDCDC</color>
     <color name="F333333">#333333</color>
+    <color name="F777777">#777777</color>
 
 
 </resources>
