--- a/app/src/main/res/layout/activity_pay_success.xml
+++ b/app/src/main/res/layout/activity_pay_success.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="支付成功"
+        android:text="支付结果"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
