--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -25,6 +25,7 @@
                android:textSize="13dp"
                android:textColor="@color/F4C4C4C"/>
            <TextView
+               android:id="@+id/order_sn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2013547895412541245"
