--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -59,7 +59,8 @@
            android:src="@drawable/test"
            app:layout_constraintTop_toBottomOf="@id/tv_line"
            android:layout_marginTop="15dp"
-           app:layout_goneMarginTop="0dp"/>
+           app:layout_goneMarginTop="0dp"
+           app:strokeColor="@color/white"/>
        <TextView
            android:id="@+id/order_title"
            android:layout_width="0dp"
