--- a/app/src/main/res/layout/mine_fragment.xml
+++ b/app/src/main/res/layout/mine_fragment.xml
@@ -293,7 +293,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="@id/guideline2"
             app:layout_constraintEnd_toEndOf="@id/guideline3"
-            app:layout_constraintTop_toBottomOf="@+id/layout_tuihuo"
+            app:layout_constraintTop_toBottomOf="@id/layout_dub"
             android:layout_marginTop="10dp"
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
@@ -480,14 +480,13 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="@id/guideline2"
             app:layout_constraintEnd_toEndOf="@id/guideline3"
-            app:layout_constraintTop_toBottomOf="@+id/layout_dub"
+            app:layout_constraintTop_toBottomOf="@id/layout_kefu"
             android:layout_marginTop="10dp"
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
             android:paddingTop="20dp"
             android:paddingBottom="20dp"
-            app:shape_bottomLeftRadius="11dp"
-            app:shape_bottomRightRadius="11dp"
+            app:shape_radius="11dp"
             app:shape_solidColor="@color/white">
             <ImageView
                 android:id="@+id/iv_setup"
@@ -527,7 +526,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="@id/guideline2"
             app:layout_constraintEnd_toEndOf="@id/guideline3"
-            app:layout_constraintTop_toBottomOf="@+id/layout_kefu"
+            app:layout_constraintTop_toBottomOf="@id/layout_myorder"
             android:layout_marginTop="10dp"
             android:paddingStart="15dp"
             android:paddingEnd="15dp"
@@ -559,7 +558,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="15dp"
-                app:layout_constraintStart_toEndOf="@+id/kf_dub"
+                app:layout_constraintStart_toEndOf="@id/kf_dub"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:text="我的作品"
