--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,7 +41,7 @@
         android:id="@+id/tv_gohome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="游客模式"
+        android:text="游客进入"
         android:textColor="#FE9520"
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
@@ -51,7 +51,8 @@
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_head"
         android:layout_width="90dp"
-        android:layout_height="90dp"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="h,1:1"
         app:layout_constraintTop_toBottomOf="@+id/login_linet"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -76,6 +77,8 @@
             android:layout_height="match_parent"
             android:background="@null"
             android:hint="请输入手机号"
+            android:textColorHint="@color/CCCCCC"
+            android:textColor="@color/black"
             android:textSize="17dp"
             android:inputType="phone"
             android:maxLength="11"
@@ -88,7 +91,8 @@
             android:src="@drawable/clear_icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:visibility="gone"/>
 
     </com.hjq.shape.layout.ShapeConstraintLayout>
 
@@ -108,6 +112,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:hint="@string/hint_sms"
+            android:textColorHint="@color/CCCCCC"
+            android:textColor="@color/black"
             android:textSize="17dp"
             android:background="@null"
             android:inputType="number"
@@ -120,8 +126,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/string_getsms"
+            android:textSize="17dp"
             android:textColor="@color/FE9520"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@id/edt_sms"
+            app:layout_constraintBottom_toBottomOf="@id/edt_sms"
             app:layout_constraintEnd_toEndOf="parent"/>
 
         <ImageView
@@ -133,7 +141,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/tv_sms"
-            android:layout_marginEnd="10dp"/>
+            android:layout_marginEnd="10dp"
+            android:visibility="gone"/>
 
     </com.hjq.shape.layout.ShapeConstraintLayout>
 
@@ -184,7 +193,7 @@
         <com.hjq.shape.view.ShapeCheckBox
             android:id="@+id/login_check"
             android:layout_width="wrap_content"
-            android:layout_height="22dp"
+            android:layout_height="wrap_content"
             android:text="@string/string_aggrument"
             android:textSize="12dp"
             android:textColor="@color/F6B6B6B"
@@ -192,9 +201,10 @@
             android:background="@color/transparent"
             app:shape_buttonCheckedDrawable="@drawable/radio_icon_selected"
             app:shape_buttonDrawable="@drawable/radio_icon_default"
-            android:checked="true"
+            android:checked="false"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            android:gravity="center"/>
         <TextView
             android:id="@+id/tv_user_agreement"
             android:layout_width="wrap_content"
