--- a/app/src/main/res/layout/activity_perfect.xml
+++ b/app/src/main/res/layout/activity_perfect.xml
@@ -20,7 +20,12 @@
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:background="@color/transparent"
-        app:lineVisible="false"/>
+        app:lineVisible="false"
+        app:leftIconTint="@color/white"
+        app:rightTitle="跳过"
+        app:rightTitleSize="14dp"
+        app:rightTitleColor="@color/white"
+        app:layout_constraintTop_toBottomOf="@+id/perfect_linet"/>
     <TextView
         android:id="@+id/tv_skip"
         android:layout_width="wrap_content"
@@ -30,7 +35,8 @@
         android:textSize="14dp"
         app:layout_constraintTop_toBottomOf="@+id/perfect_linet"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="15dp"/>
+        android:layout_marginEnd="15dp"
+        android:visibility="gone"/>
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_head"
         android:layout_width="60dp"
@@ -39,7 +45,7 @@
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_skip"
+        app:layout_constraintTop_toBottomOf="@id/title_perfect"
         android:layout_marginTop="31.5dp"
         app:shapeAppearance="@style/circleImage"
         app:strokeColor="@color/white" />
@@ -116,7 +122,7 @@
 
             <EditText
                 android:id="@+id/edt_name"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:hint="@string/hint_nick"
                 android:textColorHint="@color/CCCCCC"
@@ -127,25 +133,27 @@
                 android:maxLength="20"
                 android:background="@color/white"
                 android:textCursorDrawable="@drawable/cursor"
+                app:layout_constraintStart_toEndOf="@id/label_name"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/label_name"
+                app:layout_constraintTop_toTopOf="@id/label_name"
                 app:layout_constraintBottom_toBottomOf="@+id/label_name"/>
             <TextView
                 android:id="@+id/tv_sex"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:hint="@string/select_sex"
                 android:textColorHint="@color/CCCCCC"
                 android:textSize="17dp"
                 android:textColor="@color/black"
                 android:gravity="end"
+                app:layout_constraintStart_toEndOf="@id/label_sex"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/label_sex"
                 app:layout_constraintBottom_toBottomOf="@+id/label_sex"/>
 
             <TextView
                 android:id="@+id/tv_his"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:hint="请选择宝贝生日"
                 android:textColorHint="@color/CCCCCC"
@@ -153,9 +161,10 @@
                 android:textSize="17dp"
                 android:background="@null"
                 android:gravity="end"
+                app:layout_constraintStart_toEndOf="@id/label_his"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/label_his"
-                app:layout_constraintBottom_toBottomOf="@+id/label_his"/>
+                app:layout_constraintTop_toTopOf="@id/label_his"
+                app:layout_constraintBottom_toBottomOf="@id/label_his"/>
         </com.hjq.shape.layout.ShapeConstraintLayout>
         <com.hjq.shape.view.ShapeButton
             android:id="@+id/btn_save"
