--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,6 +7,12 @@
     tools:context=".ui.SplashActivity"
     android:background="@color/white"
     app:layoutDescription="@xml/activity_splash_scene">
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/splash_line"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.01"/>
     <ImageView
         android:id="@+id/iv_splash"
         android:layout_width="50dp"
@@ -16,19 +22,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:background="@drawable/splash2"/>
+
     <com.hjq.shape.view.ShapeTextView
         android:id="@+id/skip"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:gravity="center"
         android:padding="5dp"
-        app:shape_radius="9999dp"
-        app:shape_strokeWidth="0.5dp"
-        app:shape_strokeColor="@color/c9e9e9e"
         android:text="3s"
         android:textColor="@color/FE9520"
-        android:gravity="center"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"/>
+        app:layout_constraintTop_toBottomOf="@id/splash_line"
+        app:shape_radius="9999dp"
+        app:shape_strokeColor="@color/c9e9e9e"
+        app:shape_strokeWidth="0.5dp"
+        android:layout_marginEnd="5dp"/>
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
