--- a/app/src/main/res/layout/item_product2.xml
+++ b/app/src/main/res/layout/item_product2.xml
@@ -11,15 +11,14 @@
     android:paddingBottom="5dp">
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_product"
-        android:layout_width="110dp"
+        android:layout_width="120dp"
         android:layout_height="0dp"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintDimensionRatio="h,1:1"
+        app:layout_constraintDimensionRatio="h,1:0.666"
         app:shapeAppearance="@style/circle11Image2"
-        app:strokeColor="@color/white"
-        />
+        app:strokeColor="@color/white" />
     <TextView
         android:id="@+id/tv_product_title"
         android:layout_width="0dp"
@@ -27,9 +26,8 @@
         app:layout_constraintTop_toTopOf="@id/iv_product"
         app:layout_constraintStart_toEndOf="@id/iv_product"
         app:layout_constraintEnd_toEndOf="parent"
-        android:textSize="13dp"
+        android:textSize="14dp"
         android:textColor="#1A1A1A"
-        android:layout_marginTop="5dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:maxLines="2"
@@ -39,50 +37,50 @@
         android:id="@+id/tv_product_price"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_product_desc"
-        app:layout_constraintStart_toStartOf="@id/tv_product_desc"
+        app:layout_constraintTop_toBottomOf="@+id/tv_product_desc"
+        app:layout_constraintStart_toStartOf="@+id/tv_product_desc"
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="￥"
         android:textSize="12dp"
-        android:gravity="center|bottom"
+        android:gravity="center"
         android:textColor="@color/FE9520"
         android:layout_marginTop="10dp"
-        app:layout_goneMarginTop="33dp"/>
+        app:layout_goneMarginTop="33dp"
+        android:visibility="gone"/>
     <TextView
         android:id="@+id/tv_product_price02"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_product_desc"
-        app:layout_constraintStart_toEndOf="@id/tv_product_price"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/tv_product_desc"
+        app:layout_constraintStart_toEndOf="@+id/tv_product_price"
         app:layout_constraintBottom_toBottomOf="@id/tv_product_price"
         android:textSize="16dp"
-        android:text="1234"
         android:textColor="@color/FE9520"
         android:layout_marginTop="10dp"
-        android:gravity="bottom" />
+        android:gravity="bottom"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/tv_product_ptnum"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_product_desc"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/tv_product_desc"
         app:layout_constraintBottom_toBottomOf="@id/tv_product_price"
-        app:layout_constraintStart_toEndOf="@id/tv_product_price02"
-        android:textSize="11dp"
+        app:layout_constraintStart_toEndOf="@+id/tv_product_price02"
+        android:textSize="12dp"
         android:textColor="@color/FE9520"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
-        android:text="222"
-        android:gravity="bottom"/>
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/tv_product_desc"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="11dp"
+        android:textSize="13dp"
         android:textColor="@color/A8A8A8"
-        android:minLines="2"
-        android:maxLines="2"
+        android:minLines="1"
+        android:maxLines="1"
         android:ellipsize="end"
         app:layout_constraintStart_toStartOf="@id/tv_product_title"
         app:layout_constraintEnd_toEndOf="@id/tv_product_title"
@@ -103,9 +101,9 @@
         android:paddingTop="5dp"
         android:paddingEnd="23dp"
         android:paddingBottom="5dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/tv_product_desc"
-        app:layout_constraintTop_toTopOf="@id/tv_product_price02"
         app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="gone"/>
+        android:visibility="visible"/>
 
 </com.hjq.shape.layout.ShapeConstraintLayout>
