--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -5,7 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".web.WebActivity">
-    <com.tencent.smtt.sdk.WebView
+<!--    <com.tencent.smtt.sdk.WebView-->
+<!--        android:id="@+id/web"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"/>-->
+    <WebView
         android:id="@+id/web"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
