--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -55,7 +55,8 @@
         app:layout_constraintTop_toBottomOf="@id/tv_product_desc"
         app:layout_constraintStart_toEndOf="@id/tv_product_price"
         app:layout_constraintBottom_toBottomOf="@id/tv_product_price"
-        android:textSize="16dp"
+        android:textStyle="bold"
+        android:padding="0dp"
         android:text="1234"
         android:textColor="@color/FE9520"
         android:layout_marginTop="10dp"
